# llm-d-kv-cache

./: .gitattributes  .golangci.yml  CODEOWNERS  Dockerfile  Makefile  README.md  _typos.toml  go.mod  go.sum
.github/: dependabot.yml
.github/actions/docker-build-and-push/: action.yml
.github/actions/trivy-scan/: action.yml
.github/scripts/: generate-pip-index.sh
.github/workflows/: ci-examples.yaml  ci-lint.yaml  ci-nightly-race.yaml  ci-pages-index.yaml  ci-release-uds-tokenizer.yaml  ci-release.yaml
.tekton/: PZ_BUILDS.md  README.md  llm-d-kv-cache-konflux-poc-pull-request.yaml  llm-d-kv-cache-konflux-poc-push.yaml  llm-d-kv-cache-poc-pull-request.yaml  llm-d-kv-cache-poc-push.yaml  odh-llm-d-kv-cache-pull-request.yaml  odh-llm-d-kv-cache-v3-4-ea-2-pull-request.yaml  odh-llm-d-kv-cache-v3-4-ea-2-push.yaml  odh-llm-d-kv-cache-v3-4-push.yaml  odh-llm-d-kv-cache-v3-5-ea-1-pull-request.yaml  odh-llm-d-kv-cache-v3-5-ea-1-push.yaml  odh-llm-d-kv-cache-v3-5-ea-2-push.yaml
docs/: architecture.md  configuration.md
examples/helper/: indexer.go
examples/kv_cache_aware_scorer/: kvcache_aware_scorer.go
examples/kv_cache_index/: main.go
examples/kv_cache_index_service/server/: main.go  server.go
examples/kv_events/offline/: main.go
examples/kv_events/online/: main.go
examples/valkey_example/: main.go
kv_connectors/llmd_fs_backend/: Dockerfile.wheel  Makefile  README.md  pyproject.toml  setup.py
kv_connectors/llmd_fs_backend/csrc/storage/: storage_offload.cpp  storage_offload.hpp  storage_offload_bindings.cpp  thread_pool.cpp  thread_pool.hpp
kv_connectors/llmd_fs_backend/csrc/storage/backends/fs_gds/: gds_file_io.cpp
kv_connectors/llmd_fs_backend/docs/: gds.md  object_store.md
kv_connectors/llmd_fs_backend/docs/deployment/: vllm-storage.yaml
kv_connectors/llmd_fs_backend/llmd_fs_backend/: __init__.py  metrics.py  spec.py  worker.py
kv_connectors/llmd_fs_backend/llmd_nixl/: manager.py  nixl_lookup.py  nixl_offload.py  obj_backend.py  staged_backend.py  worker.py
kv_connectors/llmd_fs_backend/tests/: conftest.py  test_fs_backend.py  test_gds_backend.py  test_obj_backend.py  test_priority_queue.py
kv_connectors/llmd_fs_backend/tests/performance/: test_throughput.py  utils.py
pkg/kvcache/: indexer.go
pkg/kvcache/kvblock/: cost_aware_memory.go  in_memory.go  index.go  index_test.go  redis.go  token_processor_test.go
pkg/kvevents/: pool_test.go
pkg/preprocessing/chat_completions/: cgo_functions.go  cgo_functions_test.go  setup.sh
pkg/tokenization/: embedded_tokenizer.go  embedded_tokenizer_test.go  pool.go  pool_embedded.go  pool_embedded_test.go  pool_uds.go  uds_tokenizer_test.go
services/uds_tokenizer/: Dockerfile  Dockerfile.konflux  README.md  generate_hashes.py  pyproject.toml  requirements.txt  rpms.in.yaml  rpms.lock.yaml  strip_unused_deps.sh  tokenizer_grpc_service.py  torch_stub.py  ubi.repo
services/uds_tokenizer/tiktoken/src/: lib.rs
services/uds_tokenizer/tokenizer_service/: tokenizer.py
tests/e2e/redis_mock/: e2e_suite_test.go  e2e_test.go
tests/e2e/uds_tokenizer/: uds_e2e_mm_test.go  uds_e2e_suite_test.go
